// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse SNAPSHOTS accordion state in uncontrolled mode should render both bodies closed 1`] = `
<div>
  <div
    class="collapse-heading-wrapper head-1"
  >
    <h1>
      HEADING 1
    </h1>
    <span
      class="collapse-heading-icon"
    />
  </div>
  <div
    aria-expanded="false"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: hidden;"
  >
    <div
      class="test-1"
    >
      SOME FIRST TEST
    </div>
  </div>
  <div
    class="collapse-heading-wrapper head-2"
  >
    <h1>
      HEADING 2
    </h1>
    <span
      class="collapse-heading-icon"
    />
  </div>
  <div
    aria-expanded="false"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: hidden;"
  >
    <div
      class="test-2"
    >
      SOME SECOND TEST
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS accordion state in uncontrolled mode should render only first body opened 1`] = `
<div>
  <div
    class="collapse-heading-wrapper head-1"
  >
    <h1>
      HEADING 1
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: hidden;"
  >
    <div
      class="test-1"
    >
      SOME FIRST TEST
    </div>
  </div>
  <div
    class="collapse-heading-wrapper head-2"
  >
    <h1>
      HEADING 2
    </h1>
    <span
      class="collapse-heading-icon"
    />
  </div>
  <div
    aria-expanded="false"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: hidden;"
  >
    <div
      class="test-2"
    >
      SOME SECOND TEST
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS multi-opened state in controlled mode should render both bodies opened 1`] = `
<div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING 1
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div
      class="test-1"
    >
      SOME FIRST TEST
    </div>
  </div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING 2
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div
      class="test-2"
    >
      SOME SECOND TEST
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS multi-opened state in controlled mode should render only first body opened 1`] = `
<div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING 1
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div
      class="test-1"
    >
      SOME FIRST TEST
    </div>
  </div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING 2
    </h1>
    <span
      class="collapse-heading-icon"
    />
  </div>
  <div
    aria-expanded="false"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div
      class="test-2"
    >
      SOME SECOND TEST
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS should render closed state 1`] = `
<div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING
    </h1>
    <span
      class="collapse-heading-icon"
    />
  </div>
  <div
    aria-expanded="false"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: hidden;"
  >
    <div
      id="test"
    >
      SOME TEST
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS should render loading state 1`] = `
<div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div
      class="loader-wrapper"
    >
      <div
        class="loader-container"
      >
        <span
          class="loader-element"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse SNAPSHOTS should render opened state 1`] = `
<div>
  <div
    class="collapse-heading-wrapper"
  >
    <h1>
      HEADING
    </h1>
    <span
      class="collapse-heading-icon icon-expanded"
    />
  </div>
  <div
    aria-expanded="true"
    style="will-change: height; transition: height 250ms cubic-bezier(.4, 0, .2, 1); height: 0px; overflow: hidden; visibility: visible;"
  >
    <div>
      SOME TEST
    </div>
  </div>
</div>
`;
